--- a/instawork/package.json
+++ b/instawork/package.json
@@ -11,6 +11,7 @@
     "react-bootstrap-icons": "^1.6.1",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.21.0",
+    "react-loader": "^2.4.7",
     "react-redux": "^7.2.6",
     "react-scripts": "4.0.3",
     "redux": "^4.1.2",
