--- a/instawork/package.json
+++ b/instawork/package.json
@@ -10,7 +10,7 @@
     "react": "^17.0.2",
     "react-bootstrap-icons": "^1.6.1",
     "react-dom": "^17.0.2",
-    "react-hook-form": "^7.21.0",
+    "react-hook-form": "7.21.0",
     "react-loader": "^2.4.7",
     "react-redux": "^7.2.6",
     "react-scripts": "4.0.3",
